--- a/files/file.css
+++ b/files/file.css
@@ -4,7 +4,16 @@
     align-items: center;
     width: 100%;  /* Full width */
     height: 100%; /* Full height */
-     /* Prevents overflow */
+     overflow: hidden;/* Prevents overflow */
+	 margin: 0;
+	 padding: 0;
+	 position: absolute;
+    color: rgb(0, 0, 0);
+    user-select: none;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    font-size: 0.361111em;
 }
 
 #SvgExam {
